--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,7 @@
   --box-background: #424242;
   --box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
   @media (prefers-color-scheme: light) {
+    --anchor-color: #78aac1;
     --text-primary-color: #333;
     --text-secondary-color: rgba(0, 0, 0, 0.54);
     --background-color: #fff;
